--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fff;
+  background-color: #ffffff;
   font-size: 16px;
+  color: #434455;
 }
 
 ul {
