--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,10 @@ a {
   color: #404bbf;
 }
 
+.email:focus {
+  color: #404bbf;
+}
+
 .phone {
   font-weight: 400;
   font-size: 16px;
@@ -74,6 +78,10 @@ a {
 }
 
 .phone:hover {
+  color: #404bbf;
+}
+
+.hone:focus {
   color: #404bbf;
 }
 
