--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ a {
   text-decoration: none;
 }
 
+/* header */
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -85,6 +87,8 @@ a {
   color: #404bbf;
 }
 
+/* first section Title */
+
 .title {
   background-color: #2e2f42;
 }
@@ -115,4 +119,54 @@ a {
 
 .title-button:focus {
   background-color: #404bbf;
+}
+
+/* second section Features */
+
+.list-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.features-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* third section Our Team */
+
+.team {
+  background-color: #f4f4fd;
+}
+
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.team-list-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.team-list-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
