--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,11 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
+}
+
+.team-list-item {
+  background-color: #ffffff;
 }
 
 .team-list-title {
