--- a/css/styles.css
+++ b/css/styles.css
@@ -56,31 +56,17 @@ a {
   font-style: normal;
 }
 
-.email {
+.data {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.email:hover {
+.data:hover {
   color: #404bbf;
 }
 
-.email:focus {
-  color: #404bbf;
-}
-
-.phone {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
-.phone:hover {
-  color: #404bbf;
-}
-
-.hone:focus {
+.data:focus {
   color: #404bbf;
 }
 
@@ -175,7 +161,7 @@ a {
   color: #2e2f42;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
